--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     align-items: center;
     justify-content: center;
     position:relative;
-    background:url(../images/about/welcome-banner.jpg)no-repeat;
+    background:url(../images/about/background.jpeg)no-repeat;
     background-size:cover;
     background-position: center;
     height:890px;
@@ -204,6 +204,20 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     width:100%;
     height:100%;
 }
+/* Style for the elliptical image */
+.elliptical-image {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    margin-top: 60px; /* Adjust as needed */
+  }
+  
+  .elliptical-image img {
+    border-radius: 70%; /* Make the image elliptical */
+    width: 300px; /* Adjust the width as needed */
+    height: 300px; /* Adjust the height as needed */
+  }
+  
 
 /*.header-text-area*/
 .header-text h2 {
@@ -271,19 +285,25 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
 /*.single-about-txt*/
 
 /*.single-about-img */
-.single-about-img{position: relative;box-shadow: 0 5px 20px rgba(14,25,80,.30);}
+.single-about-img{position: relative;box-shadow: 0 5px 20px rgba(14,25,80,.30);
+    border-radius: 9%;
+
+}
 .single-about-img:before {
     position:  absolute;
     content: " ";
     top: 0;
     left:  0;
-    width: 109%;
+    width: 115%;
     height:  100%;
-    background: rgba(31,44,108,.3);
+    border-radius: 50%;
+    /* background: rgba(31,44,108,.3); */
+    
 }
 .single-about-img img {
     max-width: 500px;
     height: 468px;
+    border-radius: 9%;
 }
 .about-list-icon{
     display: flex;
@@ -292,9 +312,10 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 109%;
-    height: 90px;
+    width: 112%;
+    height: 81px;
     background: #1f2c6c;
+    border-radius: 5%;
 }
 /*.ab-list-icon */
 .about-list-icon ul {
@@ -323,7 +344,18 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
 /*.ab-list-icon */
 
 /*.single-about-img */
+.fa-2x{
+    color: gold;
+    font-size:7rem;
+    margin-bottom: 5%;
+    padding-top:7%;
 
+
+}
+/* .skill_content a:hover{
+text-decoration: underline;
+color: green;
+} */
 /*-------------------------------------
         5.  Education
 --------------------------------------*/
@@ -369,9 +401,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 /*-------------------------------------
         6.  Skills
 --------------------------------------*/
-.skills {
-    
-}
+
 .skill-content{padding: 50px 0 80px;}
 .single-skill-content{padding-top: 100px;}
 .section-heading h2 {
@@ -602,70 +632,71 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 .portfolio-content {padding-top: 100px;}
 
 /* ---- .item ---- */
-.isotope:after {
-    content: '';
-    display: block;
-    clear: both;
+.item {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 2%;
+   
 }
-.isotope .item {
-    position:relative;
-    overflow:hidden;
-    margin-bottom: 30px;
+.item img{
+    transition: transform 0.3s ease;
 }
-/*.item img*/
-.isotope .item img{
-    width:100%;
-    height:100%;
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    -ms-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s;
+.isotope-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: transform 0.3s ease;
 }
-.isotope .item:hover  img{
-    -webkit-transform:scale(1.5);
-    -moz-transform:scale(1.5);
-    -ms-transform:scale(1.5);
-    -o-transform:scale(1.5);
-    transform:scale(1.5);
-}/*.item img*/
 
-/*.isotope-overlay*/
-.isotope-overlay{
-    position:absolute;
-    height:100%;
-    width:100%;
-    background:rgba(31,44,108,.5);
-    display:flex;
-    align-items:center;
-    text-transform: uppercase;
-    justify-content:center;
-    flex-direction:row;
-    -webkit-transform:scale(0);
-    -moz-transform:scale(0);
-    -ms-transform:scale(0);
-    -o-transform:scale(0);
-    transform:scale(0);
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    -ms-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s;
+.item img:hover{
+    transform: scale(1.1);
 }
+
 .isotope-overlay a {
-    display: inline-block;
+    display: block;
     color: #fff;
-    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.isotope-overlay span {
+    display: block;
+    padding: 10px 20px;
+}
+
+
+
+
+
+.publications {
+    background-color: #f0f0f0;
+    padding:10%;
+} 
+
+.articles{
+    margin-bottom: 3%;
+}
+
+.articles h2,
+.articles h3,
+.download a {
+    font-size: 1.1em; /* Increase font size for all elements within articles */
+    margin-top:1%;
+}
+
+.publications .download {
     text-align: center;
 }
-.isotope .item:hover .isotope-overlay{
-    -webkit-transform:scale(1);
-    -moz-transform:scale(1);
-    -ms-transform:scale(1);
-    -o-transform:scale(1);
-    transform:scale(1);
-    top:0;
-}/*.isotope-overlay*/
+
+.publications .download a {
+    text-decoration: none;
+    color: #333;
+}
+
 
 /*-------------------------------------
         10. Clients
